--- a/public/style/_containers.scss
+++ b/public/style/_containers.scss
@@ -41,7 +41,7 @@
   }
 }
  
-@include breakpoint(break-ms) {
+@include breakpoint(break-m) {
   .fixed-left, .fixed-right {
     &, &.create {
       position: static;
