--- a/public/style/_pane.scss
+++ b/public/style/_pane.scss
@@ -3,6 +3,10 @@
   color: $white;
   padding: $size-xl / 2;
   
+  @include text-inputs {
+    width: calc(100% - 155px);
+  }
+  
   &.gray {
     background-color: $gray-dark;
     input, .pane-button {
@@ -25,6 +29,7 @@
     font-size: $font-size-m;
     font-weight: lighter;
     padding-top: 10px;
+    margin-left: 45px;
   }
   span {
     display: inline-block;
@@ -41,7 +46,6 @@
   padding-right: 15px;
   vertical-align: top;
   margin-top: 12px;
-  
 }
 .pane-section {
   padding: $size-m 0;
